--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -84,7 +84,7 @@
   }
 
 .card {
-  box-shadow: 0px 0px 10px 2px #4dff00;
+  box-shadow: 0.2px 0.2px 7px 0.1px rgba(0, 0, 0, 0.332);
 }
 
 .skyline {
